# vpn-deploy

./: .ansible-lint  .gitignore  .gitleaks.toml  .lycheeignore  .pre-commit-config.yaml  .trivyignore  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mise.toml  renovate.json  requirements.in  requirements.txt  requirements.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  release-please-config.json
ansible/: CLAUDE.md  ansible.cfg
docs/: AGE-RECOVERY.md  (+22 more)
vpnd/: .cargo-mutants.toml  .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
vpnd/src/: cli.rs  config.rs  docs_bundle.rs  lib.rs  main.rs  secrets.rs
vpnd/src/commands/: ai_docs.rs  completions.rs  deploy.rs  doctor.rs  fleet.rs  host.rs  mod.rs  preflight.rs  probe.rs  reconverge.rs  share.rs  update.rs
vpnd/src/pages/: mod.rs  qr.rs  recipient.rs
vpnd/src/runner/: ansible.rs  make.rs  mod.rs  process.rs  sops.rs  terraform.rs
vpnd/src/state/: mod.rs  registry.rs  version.rs
vpnd/src/wizard/: mod.rs  prompts.rs  sections.rs  summary.rs
vpnd/templates/: recipient.html
vpnd/tests/: ai_docs_emit.rs  completions_snapshot.rs  config_discover.rs  doctor_bundle.rs  host_crud.rs  proptest_redact.proptest-regressions  proptest_redact.rs  proptest_urlencode.rs  qr_encode.rs  recipient_render.rs  registry_roundtrip.rs  secrets_parse.rs  share_bundle.rs  update_cache.rs
vpnd/tests/snapshots/: completions_snapshot__bash_completions.snap  completions_snapshot__fish_completions.snap  completions_snapshot__zsh_completions.snap
(+350 files in other folders)
