[package]
name = "vpnd"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Unlicense"
description = "Convenience CLI wrapping the vpn-deploy Make/Terraform/Ansible/SOPS layers"
repository = "https://github.com/po4yka/vpn-deploy"
publish = false

[lib]
name = "vpnd"
path = "src/lib.rs"

[[bin]]
name = "vpnd"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
dialoguer = { version = "0.11", default-features = false, features = ["password"] }
indicatif = "0.17"
console = "0.15"
comfy-table = "7.1"
owo-colors = "4.0"
askama = "0.12"
qrcode = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "io-util", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
shell-words = "1"
directories = "5"
which = "6"
url = "2"
percent-encoding = "2"
ureq = { version = "3", default-features = false, features = ["rustls", "json"] }
include_dir = "0.7"
tar = "0.4"
flate2 = "1"

[build-dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_mangen = "0.2"

[dev-dependencies]
insta = "1"
tempfile = "3"
proptest = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"
